@@ -1,6 +1,10 @@
 2005-07-09  Jakub Jelinek  <jakub@redhat.com>
 
 	Backport from the mainline:
+	2005-07-08  Jakub Jelinek  <jakub@redhat.com>
+	* primary.c (gfc_match_rvalue): Handle ENTRY the same way
+	as FUNCTION.
+
 	2005-07-07  Jakub Jelinek  <jakub@redhat.com>
 	* scanner.c (load_line): Add pbuflen argument, don't make
 	buflen static.  If maxlen == 0 or preprocessor_flag,
